replace mv to ops

--- a/config.cfg
+++ b/config.cfg
@@ -7,6 +7,7 @@ password=Msctos3#2020
 oracle_user=oracle
 sid=msctos2
 ogg_dir=/oradata/oggmsctos2
+project_name=host
 
 
 [target_config]
@@ -17,6 +18,7 @@ password=Msctos3#2020
 oracle_user=oracle
 sid=msctos3
 ogg_dir=/oradata/oggmsctos3
+project_name=host
 
 
 
@@ -29,23 +31,23 @@ src_dmp_dir=/oradata/expdp
 tag_dmp_dir=/oradata/expdp
 
 [ogg_validate_config]
-src_ogg_user=mc_odc
-src_ogg_passwd=mc_odc
+src_ogg_user=ops_odc
+src_ogg_passwd=ops_odc
 src_db_port=1521
 tag_dmp_dir=/ogg
 
 [ogg_reinitial_config]
 reinital_tables=test.test
 src_db_port=1521
-src_ogg_user=mc_odc
-src_ogg_passwd=mc_odc
-ogg_rep=mc_rep
+src_ogg_user=ops_odc
+src_ogg_passwd=ops_odc
+ogg_rep=host_rep
 tag_dmp_dir=/ogg
 
 [ogg_trandata_config]
 os_type=linux
 db_type=oracle
-ogg_ext_name=mc_ext
+ogg_ext_name=host_ext
 ext_object=test.test2020
 
 
